--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="/Users/rahulswarup/RESUME_PROJECTS/Family_Expense_Management/frontend/node_modules/flowbite/dist/flowbite.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.0/flowbite.min.js"></script>
   </body>
 </html>
